test/ui/test/parsing/unterminated-pi-type-literal.stderr
error[E010]: found keyword ‘of’ but expected ‘->’
  ┌─ ${TEST_FOLDER}/parsing/unterminated-pi-type-literal.lushui:1:19
  │
1 │ data X (A: Type): (m: M) of
  │                   ────── start of a pi type literal
  │
  ├─ ${TEST_FOLDER}/parsing/unterminated-pi-type-literal.lushui:1:26
  │
1 │ data X (A: Type): (m: M) of
  │                          ══ unexpected token

error: aborting due to previous error

