test/ui/test/parsing/unterminated-pi-type-literal.lushui
data X (A: Type): (m: M) of
